# catmenu

./: CHANGELOG.md  CONTRIBUTORS  layout.xml  meson.build  readme.md  vala-language-server.json
data/: application.css  com.github.darkoverlordofdata.catmenu.appdata.xml.in  com.github.darkoverlordofdata.catmenu.desktop.desktop  com.github.darkoverlordofdata.catmenu.desktop.in  com.github.darkoverlordofdata.catmenu.gresource.xml  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.darkoverlordofdata.badabing.pot  es.po
src/: Alpha.vala  CatMenu.vala  MenuApplication.vala  MenuClient.vala  MenuServer.vala  MenuWindow.vala  alpha  alpha.c  bookmarks  openbox.xml  test.vala
src/Data/: CategoryData.vala  ItemData.vala  MenuData.vala  RowData.vala
src/View/: MenuCategory.vala  MenuItem.vala  PlaceItem.vala
test/: MyApplication  MyApplication.vala
